home page and alignment changed

--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="mechnotron 2k24 web project.css">
+    <link rel="stylesheet" href="mechnotron 2k24 web project.css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d1c2ea8b80.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/38a1452a02.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="https://i.ibb.co/qDhFW4W/colour-grading-final-png.png" class="food-munch-logo" /> MECHNOTRON
@@ -37,57 +36,22 @@
         </div>
     </nav>
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa-solid fa-angle-up"></i></button>
-    <script src=" mechnotron 2k24 web project.js"> </script>
+    <script src="mechnotron 2k24 web project.js"> </script>
+
     <div class="banner-section-bg-container d-flex justify-content-center flex-column p-2">
-        <div class="workdonsection bg-transparent mt-5 mt-xl-0">
-            <div class="container">
-                <div class="row">
-                    <div class="col-4">
-                        <div class="card3 text-center mt-5">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#cced00" class="bi bi-building-fill-gear" viewBox="0 0 16 16">
-                                <path d="M2 1a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v7.256A4.5 4.5 0 0 0 12.5 8a4.5 4.5 0 0 0-3.59 1.787A.5.5 0 0 0 9 9.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .39-.187A4.5 4.5 0 0 0 8.027 12H6.5a.5.5 0 0 0-.5.5V16H3a1 1 0 0 1-1-1zm2 1.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5m3 0v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5m3.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM4 5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5M7.5 5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm2.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5M4.5 8a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z" />
-                                <path d="M11.886 9.46c.18-.613 1.048-.613 1.229 0l.043.148a.64.64 0 0 0 .921.382l.136-.074c.561-.306 1.175.308.87.869l-.075.136a.64.64 0 0 0 .382.92l.149.045c.612.18.612 1.048 0 1.229l-.15.043a.64.64 0 0 0-.38.921l.074.136c.305.561-.309 1.175-.87.87l-.136-.075a.64.64 0 0 0-.92.382l-.045.149c-.18.612-1.048.612-1.229 0l-.043-.15a.64.64 0 0 0-.921-.38l-.136.074c-.561.305-1.175-.309-.87-.87l.075-.136a.64.64 0 0 0-.382-.92l-.148-.045c-.613-.18-.613-1.048 0-1.229l.148-.043a.64.64 0 0 0 .382-.921l-.074-.136c-.306-.561.308-1.175.869-.87l.136.075a.64.64 0 0 0 .92-.382zM14 12.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0" />
-                            </svg>
-                            <hr class="bg-info hrl" />
-                            <p class="para4wd">4+ Workshops</p>
-                        </div>
-                    </div>
-
-                    <div class="col-4">
-                        <div class="card3 text-center mt-5">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#cced00" class="bi bi-robot" viewBox="0 0 16 16">
-                                <path d="M6 12.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5M3 8.062C3 6.76 4.235 5.765 5.53 5.886a26.6 26.6 0 0 0 4.94 0C11.765 5.765 13 6.76 13 8.062v1.157a.93.93 0 0 1-.765.935c-.845.147-2.34.346-4.235.346s-3.39-.2-4.235-.346A.93.93 0 0 1 3 9.219zm4.542-.827a.25.25 0 0 0-.217.068l-.92.9a25 25 0 0 1-1.871-.183.25.25 0 0 0-.068.495c.55.076 1.232.149 2.02.193a.25.25 0 0 0 .189-.071l.754-.736.847 1.71a.25.25 0 0 0 .404.062l.932-.97a25 25 0 0 0 1.922-.188.25.25 0 0 0-.068-.495c-.538.074-1.207.145-1.98.189a.25.25 0 0 0-.166.076l-.754.785-.842-1.7a.25.25 0 0 0-.182-.135" />
-                                <path d="M8.5 1.866a1 1 0 1 0-1 0V3h-2A4.5 4.5 0 0 0 1 7.5V8a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1v1a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-1a1 1 0 0 0 1-1V9a1 1 0 0 0-1-1v-.5A4.5 4.5 0 0 0 10.5 3h-2zM14 7.5V13a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V7.5A3.5 3.5 0 0 1 5.5 4h5A3.5 3.5 0 0 1 14 7.5" />
-                            </svg>
-                            <hr class="bg-info hrl" />
-                            <p class="para4wd">15+ Tech Events</p>
-                        </div>
-                    </div>
-
-                    <div class="col-4">
-                        <div class="card3 text-center mt-5">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#cced00" class="bi bi-lightbulb" viewBox="0 0 16 16">
-                                <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13a.5.5 0 0 1 0 1 .5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1 0-1 .5.5 0 0 1 0-1 .5.5 0 0 1-.46-.302l-.761-1.77a2 2 0 0 0-.453-.618A5.98 5.98 0 0 1 2 6m6-5a5 5 0 0 0-3.479 8.592c.263.254.514.564.676.941L5.83 12h4.342l.632-1.467c.162-.377.413-.687.676-.941A5 5 0 0 0 8 1" />
-                            </svg>
-                            <hr class="bg-info hrl" />
-                            <p class="para4wd">20+ Non-tech events</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="text-center">
             <img src="https://i.ibb.co/N6JTmD7/finalmech.png" class="img1" viewBox="0 0 100 100" />
             <h1 class="banner-heading mt-2">MECHNOTRON 2k24</h1>
-            <a href = "coming soon.html" > <button class="custom-button mb-2">Workshops</button> </a>
+            <a href="coming soon.html"> <button class="custom-button mb-2">Workshops</button> </a>
+
             <a href="Flagship Events.html"><button class="custom-outline-button mb-2">Flagship</button></a>
         </div>
     </div>
 
-    <div class="servicesection pt-5 card20 cont3 bg-dark" id="sectionAboutus">
+    <div class="servicesection pt-5 card20" id="sectionAboutus">
         <div class="container">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 col-md-6">
                     <h1 class="mh8 mb-2">About Us</h1>
                     <h1 class="mh12 mb-2">MECHNOTRON</h1>
                     <p class="para3">MECHNOTRON is a National-level
@@ -116,36 +80,20 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6">
-                    <div class="wcu-card p-3 mb-3 shadow">
-                        <img src="https://i.ibb.co/xCFHcSZ/cit-removebg-preview.png" class="wcu-card-image" />
-                        <h1 class="wcu-card-title mt-3">Mechanical at CIT</h1>
-                        <p class="wcu-card-description text-justify">
-                            The Department of Mechanical Engineering was established in the same year as the inception of the institute viz. 1956. The department has come a long way, from an intake of 30 students at inception and pass through significant milestones to achieve the status of a globally known research centre.The department aims to become one of the best mechanical engineering departments in the country in preparing engineers capable of working innovatively and creatively towards a better world.
-                            <br><br>
-
-                        </p>
-                        <a href="https://www.cit.edu.in/departments/mechanical-engineering-department" class="menu-item-link" target="_blank">
-                            View More
-                            <svg width="16px" height="16px" viewBox="0 0 16 16" class="bi bi-arrow-right-short" fill="#d0b200" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z" />
-                            </svg>
-                        </a>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </div>
 
 
-    <div class="bg-dark" id="eventsection">
+    <div class="eventra" id="eventsection">
         <div><br><br>
             <h1 class="mh8 mb-2 ml-5">Events</h1>
         </div>
         <div class="container">
             <div class="row">
-                <div class="containerevent col-12 col-md-4 bg-dark">
-                    <div class="card bg-dark">
+                <div class="containerevent col-12 col-md-4">
+                    <div class="card">
                         <div class="face face1">
                             <div class="content text-center">
                                 <br><br><br><br><br>
@@ -155,13 +103,13 @@
                         <div class="face face2 text-center">
                             <div class="content">
                                 <p class="paranew"><span class="span1">&nbsp; &nbsp;15+ </span>Technical events &nbsp; &nbsp;</p>
-                                <a href="coming soon.html" target="_blank" class="atag btn btn-success text-white">Click here </a>
+                               <a href="coming soon.html"> <button class="btn btn-success">click here</button> </a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="containereventnontech col-12 col-md-4 bg-dark">
-                    <div class="cardnontech bg-dark">
+                <div class="containereventnontech col-12 col-md-4">
+                    <div class="cardnontech">
                         <div class="facenontech face1nontech">
                             <div class="contentnontech text-center">
                                 <br><br><br><br><br>
@@ -176,8 +124,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="containereventfun col-12 col-md-4 bg-dark">
-                    <div class="cardfun bg-dark">
+                <div class="containereventfun col-12 col-md-4">
+                    <div class="cardfun">
                         <div class="facefun face1fun">
                             <div class="contentfun text-center">
                                 <br><br><br><br><br>
@@ -187,7 +135,7 @@
                         <div class="facefun face2fun text-center">
                             <div class="contentfun">
                                 <p class="paranew"><span class="span1">10+ </span>Offline fun events</p>
-                                <a href="coming soon.html" target="_blank" class="atag btn btn-success text-white">Click here </a>
+                                <a href="coming soon.html"> <button class="btn btn-success">click here</button> </a>
                             </div>
                         </div>
                     </div>
@@ -196,7 +144,7 @@
         </div>
     </div>
 
-    <div class="responsive-container-block outer-container bg-dark">
+    <div class="responsive-container-block outer-container">
         <div class="responsive-container-block inner-container">
             <p class="text-blk section-head-text">
                 MECHNOTRON STAFF ADVISORS
@@ -247,7 +195,7 @@
     </div>
 
     <div id="sectionTeam">
-        <div class="detailed-view-bg-container bg-dark p-3">
+        <div class="detailed-view-bg-container p-3">
             <h1 class="mh8 col-md-5 mb-4 mt-1">Team behind Mechnotron</h1>
             <div class="detailed-view-card-container">
                 <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel">
@@ -308,7 +256,7 @@
                 <div class="col-12 col-md-4">
 
                     <div class="text-center text-md-left">
-                        <img src="https://i.ibb.co/qDhFW4W/colour-grading-final-png.png" class="vr-logo" />
+                        <img src="https://i.ibb.co/N6JTmD7/finalmech.png" class="vr-logo" />
 
                         <div class="d-flex flex-row justify-content-center justify-content-md-start mt-3 mb-3">
 
@@ -339,7 +287,7 @@
 
                         <p class="vr-footer-section-text">
 
-                            Civil aerodrome post, Avinashi Rd, Coimbatore-014 ,TamilNadu
+                            Civil Aerodrome Post, Avinashi Rd, Coimbatore-014 ,TamilNadu
 
                         </p>
 
@@ -364,7 +312,7 @@
 
                             <i class="fa-solid fa-phone icon"></i>
 
-                            <span class="vr-footer-section-text">8825581892</span>
+                            <span class="vr-footer-section-text">9659615101</span>
 
                         </li>
 
@@ -372,7 +320,7 @@
 
                             <i class="fa-solid fa-location-dot icon"></i>
 
-                            <span class="vr-footer-section-text">Map</span>
+                            <a href="https://maps.app.goo.gl/AepBF6Vzu5nQYL7WA"><span class="vr-footer-section-text">Opp to CMC</span></a>
 
                         </li>
 
