Final preview updated

--- a/coming soon.html
+++ b/coming soon.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
+    
     <div class="wrapper col-12 col-md-12">
-        <h1>coming soon<span class="dot">...</span></h1>
+        <h1>COMING SOON<span class="dot">...</span></h1>
         <p>MECHNOTRON 2K24</p>
     </div>
 </body>
