--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <script src="https://kit.fontawesome.com/d1c2ea8b80.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/38a1452a02.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://db.onlinewebfonts.com/c/9ab2dfb07fcf496b0a61ff6c4fcb68c9?family=MOTO+VERSE+Italic" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="https://i.ibb.co/qDhFW4W/colour-grading-final-png.png" class="food-munch-logo" /> MECHNOTRON
+                <img src="Images/Mechnotron  2K24 logo COLOUR.png"class="food-munch-logo" />MECHNOTRON
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,25 +36,30 @@
             </div>
         </div>
     </nav>
-    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa-solid fa-angle-up"></i></button>
-    <script src="mechnotron 2k24 web project.js"> </script>
 
-    <div class="banner-section-bg-container d-flex justify-content-center flex-column p-2">
-        <div class="text-center">
-            <img src="https://i.ibb.co/N6JTmD7/finalmech.png" class="img1" viewBox="0 0 100 100" />
-            <h1 class="banner-heading mt-2">MECHNOTRON 2k24</h1>
-            <a href="coming soon.html"> <button class="custom-button mb-2">Workshops</button> </a>
 
-            <a href="Flagship Events.html"><button class="custom-outline-button mb-2">Flagship</button></a>
-        </div>
+<div class="banner-section-bg-container d-flex justify-content-end flex-column">
+    <div class="text-center pb-4">
+        <a href="coming soon.html"><button class="custom-outline-button">Workshop</button></a>
+        <a href="coming soon.html"><button class="custom-outline-button">Flagship</button></a>
     </div>
+</div>
+
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="bi bi-chevron-up"></i>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="30" fill="currentColor" class="bi bi-chevron-up pb-1" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708z"/>
+          </svg></button>
+    <script src="mechnotron 2k24 web project.js"></script>
+
+
+
 
     <div class="servicesection pt-5 card20" id="sectionAboutus">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 text-justify">
                     <h1 class="mh8 mb-2">About Us</h1>
-                    <h1 class="mh12 mb-2">MECHNOTRON</h1>
+                    <h1 class="navbar-brand1 mb-2">MECHNOTRON</h1>
                     <p class="para3">MECHNOTRON is a National-level
                         technical symposium organized with pomp
                         and grandeur every year by the Department
@@ -103,7 +109,7 @@
                         <div class="face face2 text-center">
                             <div class="content">
                                 <p class="paranew"><span class="span1">&nbsp; &nbsp;15+ </span>Technical events &nbsp; &nbsp;</p>
-                               <a href="coming soon.html"> <button class="btn btn-success">click here</button> </a>
+                               <a href="coming soon.html" target="_blank" class="atag btn btn-success text-white">click here</a>
                             </div>
                         </div>
                     </div>
@@ -135,7 +141,7 @@
                         <div class="facefun face2fun text-center">
                             <div class="contentfun">
                                 <p class="paranew"><span class="span1">10+ </span>Offline fun events</p>
-                                <a href="coming soon.html"> <button class="btn btn-success">click here</button> </a>
+                                <a href="coming soon.html" target="_blank" class="atag btn btn-success text-white">click here</a>
                             </div>
                         </div>
                     </div>
@@ -146,14 +152,14 @@
 
     <div class="responsive-container-block outer-container">
         <div class="responsive-container-block inner-container">
-            <p class="text-blk section-head-text">
-                MECHNOTRON STAFF ADVISORS
+            <p class="text-blk section-head-text pb-5">
+                Mechnotron Staff Advisors
             </p>
             <div class="responsive-container-block">
                 <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
                     <div class="team-card">
                         <div class="img-wrapper">
-                            <img class="team-img" src="https://i.ibb.co/yk3mdqv/Dr-N-Rajam-Ramaswamy.jpg">
+                            <img class="team-img" src="Images/Staff advisors/Dr.N.Rajam Ramaswamy.jpg">
                         </div>
                         <p class="text-blk name pt-4">
                             Dr.N.RajamRamasamy
@@ -166,7 +172,7 @@
                 <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
                     <div class="team-card">
                         <div class="img-wrapper">
-                            <img class="team-img" src="https://i.ibb.co/WsgcM3y/Dr-D-P-Sam-Solomon.jpg">
+                            <img class="team-img" src="Images/Staff advisors/Dr.D.P.Sam Solomon .jpg">
                         </div>
                         <p class="text-blk name pt-4">
                             Dr.P.Sam Soloman
@@ -180,7 +186,7 @@
                 <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
                     <div class="team-card">
                         <div class="img-wrapper">
-                            <img class="team-img1" src="https://i.ibb.co/zxk40hX/Mr-R-S-Mohan-Kumar.jpg">
+                            <img class="team-img1" src="Images/Staff advisors/Mr.R.S.Mohan Kumar.jpg">
                         </div>
                         <p class="text-blk name pt-3">
                             Dr.R.S.Mohan Kumar
@@ -196,7 +202,7 @@
 
     <div id="sectionTeam">
         <div class="detailed-view-bg-container p-3">
-            <h1 class="mh8 col-md-5 mb-4 mt-1">Team behind Mechnotron</h1>
+            <h1 class="mh8 col-md-5 mb-4 mt-1">Team Behind Mechnotron</h1>
             <div class="detailed-view-card-container">
                 <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
@@ -206,31 +212,34 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="https://i.ibb.co/5kxmFCL/BOARD-MEMBERS-mech.png" class="d-block w-100" alt="..." />
+                            <img src="Images/team/BOARD MEMBERS .png" class="d-block w-100" alt="..." />
                         </div>
                         <div class="carousel-item">
-                            <img src="https://i.ibb.co/PwJ77F2/DESIGN-TEAM.png" class="d-block w-100" alt="..." />
+                            <img src="Images/team/DESIGN TEAM .png" class="d-block w-100" alt="..." />
                         </div>
                         <div class="carousel-item">
-                            <img src="https://i.ibb.co/NLZNpNQ/event-conveyor-team.png" class="d-block w-100" alt="..." />
+                            <img src="Images/team/event conveyor team .png" class="d-block w-100" alt="..." />
                         </div>
                         <div class="carousel-item">
-                            <img src="https://i.ibb.co/7yQb9Vk/SPONSERSHIP-TEAM.png" class="d-block w-100" alt="..." />
+                            <img src="Images/team/SPONSERSHIP TEAM  new.png" class="d-block w-100" alt="..." />
                         </div>
                         <div class="carousel-item">
-                            <img src="https://i.ibb.co/zJ3Lw3z/event-manager-team.png" class="d-block w-100" alt="..." />
+                            <img src="Images/team/event manager team new .png" class="d-block w-100" alt="..." />
                         </div>
                         <div class="carousel-item">
-                            <img src="https://i.ibb.co/rG8LZx5/SOCIALMEDIA.jpg" class="d-block w-100" alt="..." />
+                            <img src="Images/team/SPONSERSHIP TEAM  new.png" class="d-block w-100" alt="..." />
                         </div>
                         <div class="carousel-item">
-                            <img src="https://i.ibb.co/cDVv4VS/work-shop-team.png" class="d-block w-100" alt="..." />
+                            <img src="Images/team/work shop team .png" class="d-block w-100" alt="..." />
                         </div>
                         <div class="carousel-item">
-                            <img src="https://i.ibb.co/S7mnB9h/flagship-team.png" class="d-block w-100" alt="..." />
+                            <img src="Images/team/flagship team new.png" class="d-block w-100" alt="..." />
                         </div>
                         <div class="carousel-item">
-                            <img src="https://i.ibb.co/VjmDCWZ/website-team.png" class="d-block w-100" alt="..." />
+                            <img src="Images/team/website team .png" class="d-block w-100" alt="..." />
+                        </div>
+                        <div class="carousel-item">
+                            <img src="Images/team/Sarath.png" class="d-block w-100" alt="..." />
                         </div>
                     </div>
                     <a class="carousel-control-prev" data-target="#carouselExampleIndicators1" role="button" data-slide="prev">
@@ -256,7 +265,7 @@
                 <div class="col-12 col-md-4">
 
                     <div class="text-center text-md-left">
-                        <img src="https://i.ibb.co/N6JTmD7/finalmech.png" class="vr-logo" />
+                        <img src="Images/fotter logo-final.png" class="vr-logo" />
 
                         <div class="d-flex flex-row justify-content-center justify-content-md-start mt-3 mb-3">
 
