--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="banner-section-bg-container d-flex justify-content-end flex-column">
     <div class="text-center pb-4">
         <a href="coming soon.html"><button class="custom-outline-button">Workshop</button></a>
-        <a href="coming soon.html"><button class="custom-outline-button">Flagship</button></a>
+        <a href="Flagship Events.html"><button class="custom-outline-button">Flagship</button></a>
     </div>
 </div>
 
@@ -64,7 +64,7 @@
                         technical symposium organized with pomp
                         and grandeur every year by the Department
                         of Mechanical Engineering, Coimbatore
-                        Institute of Technology. Mechnotron provides
+                        Institute of Technology.Mechnotron provides
                         a huge platform for students all around the
                         nation to portray their talents and showcase
                         their skills through jam-packed webinars and
@@ -140,7 +140,7 @@
                         </div>
                         <div class="facefun face2fun text-center">
                             <div class="contentfun">
-                                <p class="paranew"><span class="span1">10+ </span>Offline fun events</p>
+                                <p class="paranew"><span class="span1">10+ </span> fun events</p>
                                 <a href="coming soon.html" target="_blank" class="atag btn btn-success text-white">click here</a>
                             </div>
                         </div>
@@ -183,13 +183,14 @@
                     </div>
                 </div>
 
+
                 <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
                     <div class="team-card">
                         <div class="img-wrapper">
-                            <img class="team-img1" src="Images/Staff advisors/Mr.R.S.Mohan Kumar.jpg">
+                            <img class="team-img" src="Images/Staff advisors/Mr.R.S.Mohan Kumar.jpg">
                         </div>
-                        <p class="text-blk name pt-3">
-                            Dr.R.S.Mohan Kumar
+                        <p class="text-blk name pt-4">
+                            Mr.R.S.Mohan Kumar
                         </p>
                         <p class="text-blk position">
                             Staff Advisor
@@ -200,9 +201,9 @@
         </div>
     </div>
 
-    <div id="sectionTeam">
-        <div class="detailed-view-bg-container p-3">
-            <h1 class="mh8 col-md-5 mb-4 mt-1">Team Behind Mechnotron</h1>
+    <div id="sectionTeam ">
+        <div class="detailed-view-bg-container p-3 ">
+            <h1 class=" text-blk section-head-text  text-center mb-4 mt-1">Team Behind Mechnotron</h1>
             <div class="detailed-view-card-container">
                 <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
@@ -227,7 +228,7 @@
                             <img src="Images/team/event manager team new .png" class="d-block w-100" alt="..." />
                         </div>
                         <div class="carousel-item">
-                            <img src="Images/team/SPONSERSHIP TEAM  new.png" class="d-block w-100" alt="..." />
+                            <img src="Images/team/SOCIALMEDIA .png" class="d-block w-100" alt="..." />
                         </div>
                         <div class="carousel-item">
                             <img src="Images/team/work shop team .png" class="d-block w-100" alt="..." />
