Events details added - 1

--- a/Flagship Events.html
+++ b/Flagship Events.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="col-12 col-md-6">
                     <div class="c-1flagship mt-2 shadow-lg">
-                        <img src="https://i.ibb.co/V2q7rgv/180205-r31420.webp" class="img5flagship" />
+                        <img src="Images/Events/Flagship/Drone.webp" class="img5flagship" />
                         <div class="p-2">
                             <h2 class="mh8flagship">DRONE MANIA</h2>
 
@@ -37,7 +37,7 @@
 
                 <div class="col-12 mt-2 col-md-6">
                     <div class="c-1flagship mt-2 shadow-lg">
-                        <img src="https://i.ibb.co/wwdMbZF/irc-fg.jpg" class="img5flagship" />
+                        <img src="Images/Events/Flagship/Robot.jpg" class="img5flagship" />
                         <div class="p-2">
                             <h2 class="mh8flagship">ROBO VERSE</h2>
                             <a href="coming soon.html" class="a1flagship">Register
