--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
                         <div class="face face1">
                             <div class="content text-center">
                                 <br><br><br><br><br>
-                                <h3 class="mhevent text-white">TECHNICAL EVENTS</h3>
+                                <h3 class="mhevent text-white">OFFLINE TECHNICAL EVENTS</h3>
                             </div>
                         </div>
                         <div class="face face2 text-center">
                             <div class="content">
-                                <p class="paranew"><span class="span1">&nbsp; &nbsp;15+ </span>Technical events &nbsp; &nbsp;</p>
-                               <a href="coming soon.html" target="_blank" class="atag btn btn-success text-white">click here</a>
+                                <p class="paranew"><span class="span1">&nbsp; &nbsp;14 </span>Offline Technical Events &nbsp; &nbsp;</p>
+                               <a href="Technical.html" target="_blank" class="atag btn btn-success text-white">click here</a>
                             </div>
                         </div>
                     </div>
@@ -119,13 +119,13 @@
                         <div class="facenontech face1nontech">
                             <div class="contentnontech text-center">
                                 <br><br><br><br><br>
-                                <h3 class="mhevent text-white"> NON-TECHNICAL EVENTS</h3>
+                                <h3 class="mhevent text-white"> ONLINE TECHNICAL EVENTS</h3>
                             </div>
                         </div>
                         <div class="facenontech face2nontech text-center">
                             <div class="contentnontech">
-                                <p class="paranew"><span class="span1">20+ </span> Non-Technical events</p>
-                                <a href="https://www.instagram.com/mechnotron_2k24?igsh=Mmh4ZWV5M29jdWJm" target="_blank" class="atag btn btn-success text-white">click here</a>
+                                <p class="paranew"><span class="span1">6 </span> Online Technical Events</p>
+                                <a href="Technical online.html" target="_blank" class="atag btn btn-success text-white">click here</a>
                             </div>
                         </div>
                     </div>
@@ -135,13 +135,13 @@
                         <div class="facefun face1fun">
                             <div class="contentfun text-center">
                                 <br><br><br><br><br>
-                                <h3 class="mhevent text-white">FUN EVENTS</h3>
+                                <h3 class="mhevent text-white">NON TECHNICAL EVENTS</h3>
                             </div>
                         </div>
                         <div class="facefun face2fun text-center">
                             <div class="contentfun">
-                                <p class="paranew"><span class="span1">10+ </span> fun events</p>
-                                <a href="coming soon.html" target="_blank" class="atag btn btn-success text-white">click here</a>
+                                <p class="paranew"><span class="span1">8 </span> Non Technical Events</p>
+                                <a href="Non tech .html" target="_blank" class="atag btn btn-success text-white">click here</a>
                             </div>
                         </div>
                     </div>
@@ -297,7 +297,7 @@
 
                         <p class="vr-footer-section-text">
 
-                            Civil Aerodrome Post, Avinashi Rd, Coimbatore-014 ,TamilNadu
+                            Civil Aerodrome Post, Avinashi Rd, Coimbatore-641-014 ,TamilNadu
 
                         </p>
 
