Flagship events added.

--- a/Flagship Events.html
+++ b/Flagship Events.html
@@ -25,8 +25,8 @@
                         <img src="Images/Events/Flagship/Drone.webp" class="img5flagship" />
                         <div class="p-2">
                             <h2 class="mh8flagship">DRONE MANIA</h2>
-
-                            <a href="coming soon.html" class="a1flagship">Register
+                            <p> Obstacle Avoidance Drone Racing.</p>
+                            <a href="Dronemania.html" class="a1flagship">View more
                                 <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20" fill="#1754a1" class="bi bi-arrow-right" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
                                 </svg>
@@ -40,12 +40,11 @@
                         <img src="Images/Events/Flagship/Robot.jpg" class="img5flagship" />
                         <div class="p-2">
                             <h2 class="mh8flagship">ROBO VERSE</h2>
-                            <a href="coming soon.html" class="a1flagship">Register
+                            <p> Be a Hunter or Get Hunted.</p>
+                            <a href="Roboverse.html" class="a1flagship">View more
                                 <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20" fill="#1754a1" class="bi bi-arrow-right" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
-                                </svg>
-                            </a>
-                        </div>
+                                </svg>sectionTeam 
                     </div>
                     <div class="mt-3 d-flex flex-row justify-content-end">
                        <a href="index.html" > <button class="btn btn-primary but3flagship pr-5 pl-5">Back</button> </a>
