--- a/Technical.html
+++ b/Technical.html
@@ -83,7 +83,7 @@
                         <img src="Images/Events/Tech/water rocket.jpg" class="img5technical" />
                         <div class="p-2">
                             <h2 class="mh8technical">Bottle Rocketrix</h2>
-                            <p>How fast can your bottle fly..?</p>
+                            <p>How fasectionTeam st can your bottle fly..?</p>
                             <a href="https://docs.google.com/forms/d/1OrkFb77DhJ0SnZwBVhHvF5L9O5ixgMkzB_n1WBbHkNc/edit" target="_blank" class="a1technical">Register
                                 <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20" fill="#1754a1" class="bi bi-arrow-right" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
@@ -100,7 +100,7 @@
                             <h2 class="mh8technical">Coder's Crusade</h2>
                             <p>Elevate Your Code, Shape the Future</p>
                             <a href="https://docs.google.com/forms/d/1XHOlxvhElpxUDG7XyKUPSvFqMw-Ae6ZIwfm_ybg-UD8/edit" target="_blank" class="a1technical">Register
-                                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20" fill="#1754a1" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                                <svg xmlns="http://sectionTeam www.w3.org/2000/svg" width="12" height="20" fill="#1754a1" class="bi bi-arrow-right" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
                                 </svg>
                             </a>
@@ -224,16 +224,12 @@
                                     <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
                                 </svg>
                             </a>
-                        </div>
+                        </div>sectionTeam 
                     </div>
                     <div class="mt-3 d-flex flex-row justify-content-end">
                         <a href="index.html" > <button class="btn btn-primary but3flagship pr-5 pl-5">Back</button> </a>
                      </div>
                 </div>
-
-            </div>
-        </div>
-    </div>
-</body>
+                sectionTeam 
 
 </html>
