webinars and workshops page added

--- a/Non tech .html
+++ b/Non tech .html
@@ -23,7 +23,7 @@
                         <img src="Images/Events/Fun Events/Poster Making .jpg" class="img5technicalon" />
                         <div class="p-2">
                             <h2 class="mh8technicalon">Stick No Bills </h2>
-                            <p>Design an attractive and stylish poster of event theme</p>
+                            <p>Design an attractive poster </p>
                             <a href="https://docs.google.com/forms/d/1T4gdY62w6yIRwMqDiEx-2ZUsD9io9hr1xBQt0viHEYM/edit" class="a1technical" target="_blank">Register
                                 <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20" fill="#1754a1" class="bi bi-arrow-right" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
@@ -53,7 +53,7 @@
                         <img src="Images/Events/Fun Events/short flim contest.jpg" class="img5technicalon" />
                         <div class="p-2">
                             <h2 class="mh8technicalon">Mr Revolutionist</h2>
-                            <p>Is your story change the world in just 15 minutes.Depict any engineering concept in short flim.</p>
+                            <p>Depict any engineering concept in short flim.</p>
                             <a href="" class="a1technical" target="_blank">Register
                                 <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20" fill="#1754a1" class="bi bi-arrow-right" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
@@ -68,7 +68,7 @@
                         <img src="Images/Events/Fun Events/crafts.jpg" class="img5technicalon" />
                         <div class="p-2">
                             <h2 class="mh8technicalon">Ctrl X & Ctrl V</h2>
-                            <p>Create your simile and dreams by craft, creativity never sleeps.</p>
+                            <p>creativity never sleeps.</p>
                             <a href="https://docs.google.com/forms/d/1lRt3CkW99-0tEw2MhLtSHpuVbFFINzbRDhoDUnr52II/edit" class="a1technical" target="_blank">Register
                                 <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20" fill="#1754a1" class="bi bi-arrow-right" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
@@ -83,8 +83,7 @@
                         <img src="Images/Events/Fun Events/upcycled crestion.jpg" class="img5technicalon" />
                         <div class="p-2">
                             <h2 class="mh8technicalon">Upcycled Creations </h2>
-                            <p>Get ready to unleash your creativity and
-                                turn trash into treasure.</p>
+                            <p>Get ready to unleash your creativity</p>
                             <a href="https://docs.google.com/forms/d/18-WQj4d7YiFdCleXGaunLZWtkFAv9F201voSJF6Nuno/edit" class="a1technical" target="_blank">Register
                                 <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20" fill="#1754a1" class="bi bi-arrow-right" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
@@ -99,9 +98,7 @@
                         <img src="Images/Events/Fun Events/Photography.jpg" class="img5technicalon" />
                         <div class="p-2">
                             <h2 class="mh8technicalon">Snap spectra</h2>
-                            <p>A good photographer know where to stand
-                                and click/ beyond the lens/ capturing
-                                moments, creating memories.</p>
+                            <p> capturing moments & creating memories</p>
                             <a href="https://docs.google.com/forms/d/1Lrbx83MKOvu01q4_zFY638rzWIPYLdocmssKEan8ubg/edit" class="a1technical" target="_blank">Register
                                 <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20" fill="#1754a1" class="bi bi-arrow-right" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
@@ -116,8 +113,7 @@
                         <img src="Images/Events/Fun Events/drawing.jpg" class="img5technicalon" />
                         <div class="p-2">
                             <h2 class="mh8technicalon">In(k)spire</h2>
-                            <p>Celebrating imagination , unleash your
-                                creativity</p>
+                            <p>Celebrating imagination</p>
                             <a href="https://docs.google.com/forms/d/1VbTLmNOEC1LSEl2_7LKwDTWhAbv1O4tkmKDcfLO8tvY/edit" class="a1technical" target="_blank">Register
                                 <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20" fill="#1754a1" class="bi bi-arrow-right" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
