--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ml-auto">
-                    <a class="nav-link active" id="navItem1" href="coming soon.html">
+                    <a class="nav-link active" id="navItem1" href="webinar opener.html">
                         Webinars
                         <span class="sr-only">(current)</span>
                     </a>
@@ -40,7 +40,7 @@
 
 <div class="banner-section-bg-container d-flex justify-content-end flex-column">
     <div class="text-center pb-4">
-        <a href="coming soon.html"><button class="custom-outline-button">Workshop</button></a>
+        <a href="workshop opener.html"><button class="custom-outline-button">Workshop</button></a>
         <a href="Flagship Events.html"><button class="custom-outline-button">Flagship</button></a>
     </div>
 </div>
@@ -109,7 +109,7 @@
                         <div class="face face2 text-center">
                             <div class="content">
                                 <p class="paranew"><span class="span1">&nbsp; &nbsp;14 </span>Offline Technical Events &nbsp; &nbsp;</p>
-                               <a href="Technical.html" target="_blank" class="atag btn btn-success text-white">click here</a>
+                               <a href="Technical offline.html" target="_blank" class="atag btn btn-success text-white">click here</a>
                             </div>
                         </div>
                     </div>
