faculty name modified & meta file added

--- a/ev_workshop.html
+++ b/ev_workshop.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="ev_workshop.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -34,6 +35,9 @@
                         <a href="https://forms.gle/79E3A6qwT9GAfXqM7" target="_blank"><button class="btn btn-primary but-lw1">Register (Bulk)</button></a>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
