--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                             <img class="team-img" src="Images/Staff advisors/Dr.D.P.Sam Solomon .jpg">
                         </div>
                         <p class="text-blk name pt-4">
-                            Dr.P.Sam Soloman
+                            Dr.D.P.Sam Solomon
                         </p>
                         <p class="text-blk position">
                             Staff Advisor
