--- a/Ml_workshop.html
+++ b/Ml_workshop.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Ml_workshop.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -21,7 +22,7 @@
                         <img src="Images/Events/workshops/mlposter.jpg" class="img-2w2 w-100" />
                     </div>
                     <div class="int-2w2">
-                        <p class="mh-5w2 mt-3">JUMPSTART YOUR ML JOURNEY : HANDA-ON LEARNING AND APPLICATION<br /></P>
+                        <p class="mh-5w2 mt-3">JUMPSTART YOUR ML JOURNEY : HANDS-ON LEARNING AND APPLICATION<br /></P>
                         <p class="p-8w2">by <spam class="text-primary">MR.SATHISH RAVI</spam> AND <span class="text-primary">MR.EZHILARASAN</span>
                         </p>
                     </div>
@@ -34,7 +35,9 @@
                         <a href="https://forms.gle/79E3A6qwT9GAfXqM7" target="_blank"><button class="btn btn-primary but-lw2">Register (Bulk)</button></a>
                     </div>
                 </div>
-
+</div>
+</div>
+</div>
 </body>
 
 </html>
