--- a/Non tech .html
+++ b/Non tech .html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Non tech.css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -54,7 +55,7 @@
                         <div class="p-2">
                             <h2 class="mh8technicalon">Mr Revolutionist</h2>
                             <p>Depict any engineering concept in short flim.</p>
-                            <a href="" class="a1technical" target="_blank">Register
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSeRrYoT90rdrhMI7oARBo_9obWSHullElKOYPcfvlTn1vnXeg/viewform?usp=sf_link" class="a1technical" target="_blank">Register
                                 <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20" fill="#1754a1" class="bi bi-arrow-right" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
                                 </svg>
